# GroupCtrl

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  build.rs  input.css  package-lock.json  package.json  theme.css
src/: action.rs  app.rs  components.rs  hooks.rs  hotkeys.rs  main.rs  models.rs  open.rs  os.rs  services.rs  ui.rs  util.rs
src/components/: app.rs  app_selector.rs  group_config.rs  hotkey_picker.rs  list.rs  mod.rs  root.rs  util.rs
src/components/button/: component.rs  style.css
src/components/input/: component.rs  style.css
src/components/label/: style.css
src/components/lists/: list_menu.rs
src/components/scroll_area/: component.rs  style.css
src/components/select/: component.rs  style.css
src/components/sidebar/: component.rs  style.css
src/components/toast/: style.css
src/components/util/: editable_text.rs  hotkey_picker.rs  listener.rs
src/hotkeys/: manager.rs  model.rs  picker.rs
src/models/: action.rs  config.rs  config_persistence.rs  group.rs  hotkey.rs  hotkey_conversion.rs
src/os/: dirs.rs  macos.rs  prelude.rs  traits.rs  windows.rs
src/os/macos/: app.rs  app_dialog.rs  app_metadata.rs  app_openable.rs  app_query.rs  config_dir.rs  edit_actions.rs  format.rs  keyboard.rs  open.rs
src/os/windows/: app.rs  app_dialog.rs  app_openable.rs  config_dir.rs  format.rs  keyboard.rs  open.rs
src/os/windows/app_openable/: open_app.rs  win32.rs
src/os/windows/app_openable/win32/: api.rs  focus.rs  windows.rs
src/os/windows/open/win32/: focus.rs  pid_to_exe.rs
src/services/: action_service.rs  config_service.rs  group.rs  group_service.rs  hotkey.rs  hotkey_service.rs
src/services/hotkey/: binder.rs  service.rs
src/services/hotkey_service/: binder.rs  error.rs  sender.rs
src/ui/: app_list.rs  group_config.rs  lists.rs  root.rs  util.rs
src/ui/lists/: app_list.rs  group_list.rs  list.rs  list_menu.rs  list_row.rs
src/ui/util/: app_label.rs  editable_text.rs  hotkey_picker.rs  labeled_row.rs  list_menu.rs  listener.rs  main_app_picker.rs  small_button.rs  target_picker.rs  use_selection.rs
src/util/: convert.rs
