[package]
name = "GroupCtrl"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
global-hotkey = "0.7.0"
anyhow = "1.0.100"
log = "0.4.29"
simplelog = "0.12.2"
dioxus = { version = "0.7.2", features = ["desktop"] }
rfd = "0.17.2"
plist = "1.8.0"
futures-util = "0.3.31"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
thiserror = "2.0.18"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
lucide-dioxus = { version = "2.564.0", features = ["math"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
block2 = "0.6.2"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSURL", "NSError", "NSDictionary", "NSNotification", "NSOperation", "NSData", "NSFileManager", "NSArray"] }
objc2-app-kit = { version = "0.3.2", features = ["NSWorkspace", "NSApplication", "NSResponder", "NSRunningApplication", "NSBitmapImageRep", "NSImageRep", "NSImage", "objc2-core-graphics"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System", "Win32_System_Threading"] }
